--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ django-cors-headers = "*"
 djangorestframework = "*"
 pygments = "*"
 httpie = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.8"
