--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 pylint = "*"
 
 [packages]
-django = "*"
+django = "==3.0.7"
 psycopg2 = "*"
 pillow = "*"
 django-multiselectfield = "*"
