--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 appdirs==1.4.4
 asgiref==3.2.7
 astroid==2.4.1
+awsebcli==3.18.1
 boto3==1.13.17
-botocore==1.16.17
+botocore==1.15.49
+cement==2.8.2
 certifi==2020.4.5.1
 chardet==3.0.4
 colorama==0.4.3
@@ -16,28 +18,36 @@ django-storages==1.9.1
 djangorestframework==3.11.0
 docutils==0.15.2
 filelock==3.0.12
+future==0.16.0
 gunicorn==20.0.4
 httpie==2.1.0
-idna==2.9
+idna==2.7
 isort==4.3.21
 jmespath==0.10.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+pathspec==0.5.9
 Pillow==7.1.2
 pipenv==2018.11.26
 psycopg2==2.8.5
 Pygments==2.6.1
 pylint==2.5.2
-python-dateutil==2.8.1
+pypiwin32==223
+python-dateutil==2.8.0
 python-dotenv==0.13.0
 pytz==2020.1
-requests==2.23.0
+pywin32==228
+PyYAML==5.3.1
+requests==2.20.1
 s3transfer==0.3.3
-six==1.15.0
+semantic-version==2.5.0
+six==1.11.0
 sqlparse==0.3.1
+termcolor==1.1.0
 toml==0.10.1
-urllib3==1.25.9
+urllib3==1.24.3
 virtualenv==20.0.21
 virtualenv-clone==0.5.4
+wcwidth==0.1.9
 whitenoise==5.1.0
 wrapt==1.12.1
