errors and requirements.txt

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
-  "python.linting.pylintArgs": [
-    "--load-plugins=pylint_django"
-  ],
+  "python.linting.pylintArgs": ["--load-plugins=pylint_django"],
   "python.linting.pylintEnabled": true,
-  "python.linting.enabled": true
+  "python.linting.enabled": true,
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter"
+  },
+  "python.formatting.provider": "none"
 }
